# Django_Crud

./: db.sqbpro  db.sqlite3  pyproject.toml
category/: forms.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py
login/: admin.py  forms.py  models.py  urls.py  views.py
login/migrations/: 0001_initial.py  0002_user_full_name.py  0003_user_is_email_verified.py  0004_user_image.py  0005_remove_user_image.py  0006_userprofile.py  0007_alter_userprofile_user.py  0008_alter_userprofile_user.py
product/: forms.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py
templates/: activation-failed.html  activation.html  base.html  categoryadd.html  categoryread.html  dashboard.html  delsession.html  get-session.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  productread.html  register.html  setsession.html  updateproduct.html  updateuser.html  useradd.html  userread.html
user/: forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_image.py  0003_remove_user_image.py  0004_user_image.py  0005_alter_user_image.py  0006_alter_user_name.py
userCRUD/: asgi.py  settings.py  urls.py
